--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,13 @@ NODE_ENV=development
 APP_KEY=04lNmXX77BdG1KxEGaJEwYo6E18yfHMV
 DRIVE_DISK=local
 APP_URL=http://localhost:${PORT}
+FRONTEND_URL=http://localhost:5173
+SERVER_RECAPTCHA_KEY=<Server-Recaptcha-Key>
+GOOGLE_CLIENT_ID=<GOOGLE_CLIENT_ID>
+GOOGLE_CLIENT_SECRET=<GOOGLE_CLIENT_SECRET>
+
+GOOGLE_CLIENT_ID=<GOOGLE_CLIENT_ID>
+GOOGLE_CLIENT_SECRET=-<GOOGLE_CLIENT_SECRET>
 
 DB_CONNECTION=mysql
 MYSQL_HOST=127.0.0.1
