add some changement and format code

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,7 @@ APP_KEY=04lNmXX77BdG1KxEGaJEwYo6E18yfHMV
 DRIVE_DISK=local
 APP_URL=http://localhost:${PORT}
 FRONTEND_URL=http://localhost:5173
-SERVER_RECAPTCHA_KEY=<Server-Recaptcha-Key>
-GOOGLE_CLIENT_ID=<GOOGLE_CLIENT_ID>
-GOOGLE_CLIENT_SECRET=<GOOGLE_CLIENT_SECRET>
+SERVER_RECAPTCHA_KEY=<SERVER_RECAPTCHA_KEY>
 
 GOOGLE_CLIENT_ID=<GOOGLE_CLIENT_ID>
 GOOGLE_CLIENT_SECRET=-<GOOGLE_CLIENT_SECRET>
